--- a/frontend/public/password-set.html
+++ b/frontend/public/password-set.html
@@ -23,15 +23,28 @@
         <button id="checkStatusBtn" type="button">Check status</button>
       </div>
 
-      <!-- Step 2: Only visible for approved emails -->
-      <form id="pwForm" style="margin-top:16px;display:none;">
+      <!-- Step 2a: First-time password set (requires token from email) -->
+      <form id="pwFormFirst" style="margin-top:16px;display:none;">
+        <p class="muted">First-time setup: use the token from your approval email.</p>
         <label>Token</label>
         <input id="token" />
         <label>New password</label>
-        <input id="password" type="password" required />
+        <input id="passwordFirst" type="password" required />
         <label>Confirm password</label>
-        <input id="confirm" type="password" required />
+        <input id="confirmFirst" type="password" required />
         <button type="submit">Set password</button>
+      </form>
+
+      <!-- Step 2b: Subsequent password change (requires old password) -->
+      <form id="pwFormChange" style="margin-top:16px;display:none;">
+        <p class="muted">Change password: verify your current password, then choose a new one.</p>
+        <label>Old password</label>
+        <input id="oldPassword" type="password" required />
+        <label>New password</label>
+        <input id="newPassword" type="password" required />
+        <label>Confirm password</label>
+        <input id="confirmNew" type="password" required />
+        <button type="submit">Change password</button>
       </form>
 
       <p id="msg" style="color:#b91c1c"></p>
@@ -40,20 +53,22 @@
     </div>
 
     <script>
-      // prefill token from query
+      const msg = document.getElementById('msg');
+      const emailInput = document.getElementById('email');
+      const pwFormFirst = document.getElementById('pwFormFirst');
+      const pwFormChange = document.getElementById('pwFormChange');
+      const checkBtn = document.getElementById('checkStatusBtn');
+
+      // prefill token from query for first-time setup
       const params = new URLSearchParams(location.search);
       const tokenFromQuery = params.get('token');
       if (tokenFromQuery) document.getElementById('token').value = tokenFromQuery;
 
-      const msg = document.getElementById('msg');
-      const emailInput = document.getElementById('email');
-      const pwForm = document.getElementById('pwForm');
-      const checkBtn = document.getElementById('checkStatusBtn');
-
       checkBtn.addEventListener('click', async () => {
         const email = emailInput.value.trim();
         msg.textContent = '';
-        pwForm.style.display = 'none';
+        pwFormFirst.style.display = 'none';
+        pwFormChange.style.display = 'none';
 
         if (!email) {
           msg.textContent = 'Email is required';
@@ -61,7 +76,7 @@
         }
 
         try {
-          const statusRes = await fetch('http://localhost:3001/auth/signup-status?email=' + encodeURIComponent(email));
+          const statusRes = await fetch('http://localhost:4000/auth/signup-status?email=' + encodeURIComponent(email));
           const statusData = await statusRes.json().catch(() => ({}));
           if (!statusRes.ok) {
             msg.textContent = statusData.error || 'Failed to check status';
@@ -81,19 +96,27 @@
             return;
           }
 
-          // Approved: show password form
-          msg.textContent = 'Your signup is approved. You can now set your password.';
-          pwForm.style.display = 'block';
+          // Approved: decide whether this is first-time setup or a later change
+          if (statusData.mustSetPassword) {
+            msg.textContent = 'Your signup is approved. You can now set your password for the first time.';
+            pwFormFirst.style.display = 'block';
+            pwFormChange.style.display = 'none';
+          } else {
+            msg.textContent = 'Your account is already active. You can change your password below.';
+            pwFormFirst.style.display = 'none';
+            pwFormChange.style.display = 'block';
+          }
         } catch (err) {
           msg.textContent = 'Network error';
         }
       });
 
-      pwForm.addEventListener('submit', async (e) => {
+      // First-time password set (token + new password)
+      pwFormFirst.addEventListener('submit', async (e) => {
         e.preventDefault();
         const token = document.getElementById('token').value.trim();
-        const password = document.getElementById('password').value;
-        const confirm = document.getElementById('confirm').value;
+        const password = document.getElementById('passwordFirst').value;
+        const confirm = document.getElementById('confirmFirst').value;
         msg.textContent = '';
 
         if (!password || !confirm) {
@@ -106,7 +129,7 @@
         }
 
         try {
-          const res = await fetch('http://localhost:3001/auth/set-password', {
+          const res = await fetch('http://localhost:4000/auth/set-password', {
             method: 'POST',
             headers: { 'Content-Type': 'application/json' },
             body: JSON.stringify({ token, password })
@@ -118,6 +141,42 @@
             return;
           }
           msg.textContent = data.error || 'Failed';
+        } catch (err) {
+          msg.textContent = 'Network error';
+        }
+      });
+
+      // Subsequent password change (old password + new password)
+      pwFormChange.addEventListener('submit', async (e) => {
+        e.preventDefault();
+        const email = emailInput.value.trim();
+        const oldPassword = document.getElementById('oldPassword').value;
+        const newPassword = document.getElementById('newPassword').value;
+        const confirmNew = document.getElementById('confirmNew').value;
+        msg.textContent = '';
+
+        if (!oldPassword || !newPassword || !confirmNew) {
+          msg.textContent = 'All password fields are required';
+          return;
+        }
+        if (newPassword !== confirmNew) {
+          msg.textContent = 'New passwords do not match';
+          return;
+        }
+
+        try {
+          const res = await fetch('http://localhost:4000/auth/change-password', {
+            method: 'POST',
+            headers: { 'Content-Type': 'application/json' },
+            body: JSON.stringify({ email, oldPassword, newPassword })
+          });
+          const data = await res.json().catch(() => ({}));
+          if (res.ok) {
+            alert('Password changed — please login');
+            location.href = '/login.html';
+            return;
+          }
+          msg.textContent = data.error || 'Failed to change password';
         } catch (err) {
           msg.textContent = 'Network error';
         }
