--- a/frontend/public/password-set.html
+++ b/frontend/public/password-set.html
@@ -53,6 +53,10 @@
     </div>
 
     <script>
+      const API_BASE_URL =
+        window.location.hostname === 'localhost'
+          ? 'http://localhost:4000'
+          : 'https://gcc-control-tower.onrender.com';
       const msg = document.getElementById('msg');
       const emailInput = document.getElementById('email');
       const pwFormFirst = document.getElementById('pwFormFirst');
@@ -76,7 +80,7 @@
         }
 
         try {
-          const statusRes = await fetch('http://localhost:4000/auth/signup-status?email=' + encodeURIComponent(email));
+          const statusRes = await fetch(API_BASE_URL + '/auth/signup-status?email=' + encodeURIComponent(email));
           const statusData = await statusRes.json().catch(() => ({}));
           if (!statusRes.ok) {
             msg.textContent = statusData.error || 'Failed to check status';
@@ -129,7 +133,7 @@
         }
 
         try {
-          const res = await fetch('http://localhost:4000/auth/set-password', {
+          const res = await fetch(API_BASE_URL + '/auth/set-password', {
             method: 'POST',
             headers: { 'Content-Type': 'application/json' },
             body: JSON.stringify({ token, password })
@@ -165,7 +169,7 @@
         }
 
         try {
-          const res = await fetch('http://localhost:4000/auth/change-password', {
+          const res = await fetch(API_BASE_URL + '/auth/change-password', {
             method: 'POST',
             headers: { 'Content-Type': 'application/json' },
             body: JSON.stringify({ email, oldPassword, newPassword })
