--- a/frontend/public/login.html
+++ b/frontend/public/login.html
@@ -167,6 +167,11 @@
   </section>
 
   <script>
+    const API_BASE_URL =
+      window.location.hostname === 'localhost'
+        ? 'http://localhost:4000'
+        : 'https://gcc-control-tower.onrender.com';
+
     const form = document.getElementById('loginForm');
     const msg = document.getElementById('msg');
     form.addEventListener('submit', async (e) => {
@@ -176,7 +181,7 @@
       const password = document.getElementById('password').value;
       try {
           const loginAs = document.getElementById('loginAs').value;
-          const res = await fetch('http://localhost:4000/auth/login', {
+          const res = await fetch(API_BASE_URL + '/auth/login', {
             method: 'POST',
             headers: { 'Content-Type': 'application/json' },
             credentials: 'include',
